--- a/comissões.html
+++ b/comissões.html
@@ -1,11 +1,229 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Comissões de Arte</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #1e1e2f, #3a3a52);
+      color: #fff;
+      line-height: 1.6;
+      padding: 20px;
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      color: #ccc;
+    }
+
+    .portfolio {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+
+    .art-card {
+      background-color: #ffffff10;
+      border-radius: 15px;
+      overflow: hidden;
+      backdrop-filter: blur(8px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease;
+    }
+
+    .art-card:hover {
+      transform: scale(1.03);
+    }
+
+    .art-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      cursor: pointer;
+    }
+
+    .art-card .content {
+      padding: 15px;
+    }
+
+    .art-card .content h3 {
+      margin-bottom: 10px;
+    }
+
+    .art-card .content p {
+      color: #ddd;
+      font-size: 0.95rem;
+    }
+
+    .contact {
+      text-align: center;
+    }
+
+    .contact h2 {
+      margin-bottom: 10px;
+    }
+
+    .social-icons a {
+      margin: 0 10px;
+      color: white;
+      font-size: 1.5rem;
+      transition: color 0.3s;
+    }
+
+    .social-icons a:hover {
+      color: #ffcc00;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .modal img {
+      max-width: 90%;
+      max-height: 80vh;
+      transition: transform 0.2s;
+    }
+
+    .modal .controls {
+      margin-top: 10px;
+    }
+
+    .modal .controls button {
+      background: #fff;
+      border: none;
+      padding: 10px 15px;
+      margin: 0 5px;
+      font-size: 1.2rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .modal .close-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 2rem;
+      color: white;
+      cursor: pointer;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.8rem;
+      }
+
+      .art-card img {
+        height: 150px;
+      }
+    }
+  </style>
 </head>
+
 <body>
-    <h1>isso é um teste</h1>
+  <header>
+    <h1>Portfólio de Comissões</h1>
+    <p>Desenhos digitais personalizados | Aberto para comissões!</p>
+  </header>
+
+  <section class="portfolio">
+    <div class="art-card">
+      <img src="../Linktree_daianegit/imagens/arts/folha_na_cabeça.jpeg" alt="Arte 1" onclick="openModal(this.src)">
+      <div class="content">
+        <h3>Retrato Estilizado</h3>
+        <p>Desenho digital com traço expressivo e cores vivas. Ideal para presentes ou perfis.</p>
+      </div>
+    </div>
+
+    <div class="art-card">
+      <img src="https://via.placeholder.com/400x300" alt="Arte 2" onclick="openModal(this.src)">
+      <div class="content">
+        <h3>Cenário de Fantasia</h3>
+        <p>Ambientes imaginários com detalhes minuciosos, ideal para projetos ou livros.</p>
+      </div>
+    </div>
+
+    <div class="art-card">
+      <img src="https://via.placeholder.com/400x300" alt="Arte 3" onclick="openModal(this.src)">
+      <div class="content">
+        <h3>Personagem Original</h3>
+        <p>Criação de personagem exclusivo com base em descrições ou referências.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact">
+    <h2>Entre em Contato</h2>
+    <p>Para solicitar uma comissão ou tirar dúvidas, me encontre nas redes sociais:</p>
+    <div class="social-icons">
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-pinterest"></i></a>
+    </div>
+  </section>
+
+  <div class="modal" id="imageModal">
+    <span class="close-btn" onclick="closeModal()">&times;</span>
+    <img id="modalImg" src="" alt="Imagem Ampliada">
+    <div class="controls">
+      <button onclick="zoom(-0.1)">-</button>
+      <button onclick="zoom(0.1)">+</button>
+    </div>
+  </div>
+
+  <script>
+    let scale = 1;
+
+    function openModal(src) {
+      const modal = document.getElementById('imageModal');
+      const modalImg = document.getElementById('modalImg');
+      modal.style.display = 'flex';
+      modalImg.src = src;
+      scale = 1;
+      modalImg.style.transform = `scale(${scale})`;
+    }
+
+    function closeModal() {
+      document.getElementById('imageModal').style.display = 'none';
+    }
+
+    function zoom(factor) {
+      const modalImg = document.getElementById('modalImg');
+      scale += factor;
+      if (scale < 0.1) scale = 0.1;
+      modalImg.style.transform = `scale(${scale})`;
+    }
+  </script>
 </body>
+
 </html>
