--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </div>
     
     <div class="socials">
-      <a href="https://instagram.com/seu_usuario" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://twitter.com/seu_usuario" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/dayanee_art/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://x.com/dayanee_art" target="_blank"><i class="fab fa-twitter"></i></a>
       <a href="#"><i class="fab fa-pinterest"></i></a>
     </div>
   </div>
