tentativa correção imagens
tentativa correção imagens

--- a/comissões.html
+++ b/comissões.html
@@ -163,7 +163,7 @@
 
   <section class="portfolio">
     <div class="art-card">
-      <img src="../Linktree_daianegit/imagens/arts/folha_na_cabeça.jpeg" alt="Arte 1" onclick="openModal(this)">
+      <img src="./imagens/folha_na_cabeça.jpeg" alt="Arte 1" onclick="openModal(this)">
       <div class="content">
         <h3>Personagem original</h3>
         <p>Personagens de criação única autoral. Ideal para presentes personalizados ou uso exclusivo em perfis, agregando originalidade e identidade própria.</p>
@@ -171,7 +171,7 @@
     </div>
 
     <div class="art-card">
-      <img src="../Linktree_daianegit/imagens/arts/mulher_de_touca.jpeg" alt="Arte 2" onclick="openModal(this)">
+      <img src="./imagens/mulher_de_touca.jpeg" alt="Arte 2" onclick="openModal(this)">
       <div class="content">
         <h3>Fan'arts</h3>
         <p>Fanarts de personagens icônicos, reinterpretados com um estilo único.</p>
@@ -179,7 +179,7 @@
     </div>
 
     <div class="art-card">
-      <img src="../Linktree_daianegit/imagens/arts/medieval.jpeg" alt="Arte 3" onclick="openModal(this)">
+      <img src="./imagens/medieval.jpeg" alt="Arte 3" onclick="openModal(this)">
       <div class="content">
         <h3>Semi-realismo</h3>
         <p>Artes em semi-realismo, capturando a essência com detalhes realistas e toque artístico.</p>
