--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div class="links">
       <a href="https://www.instagram.com/dayanee_art/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
       <a href="https://x.com/dayanee_art" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
-      <a href="./comissões.html" target="_blank"><i class="fas fa-link"></i> Comissões abertas</a>
+      <a href="./comissões.html" target="_blank"><i class="fas fa-link"></i> Portfólio</a>
 
     </div>
     
     <div class="socials">
       <a href="https://www.instagram.com/dayanee_art/" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://x.com/dayanee_art" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-pinterest"></i></a>
+      <a href="https://www.threads.net/@dayanee_art" target="_blank"><i class="fab fa-threads"></i></a>
     </div>
   </div>
 
