--- a/comissões.html
+++ b/comissões.html
@@ -36,12 +36,21 @@
       color: #ccc;
     }
 
-    .portfolio {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      margin-bottom: 40px;
-    }
+/* Já existe */
+.portfolio {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+/* Adiciona isso ao final do seu CSS */
+@media (max-width: 768px) {
+  .portfolio {
+    grid-template-columns: 1fr;
+  }
+}
+
 
 
     .art-card {
