--- a/comissões.html
+++ b/comissões.html
@@ -390,7 +390,7 @@
     <div class="content">
       <h3>Anime - Evento de Aniversário</h3>
 
-      <!-- Ícone de informação com link -->
+      <!-- Ícone de informação com link, -->
       <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
         <i class="fa-solid fa-circle-info" style="color: #ccc;"></i>
         <a href="https://discord.com/channels/297732013006389252/583406099047252044/1360785067638784213" target="_blank" style="color: #aad; text-decoration: underline;">Mais informações</a>
