correções de texto
foram feitas melhorias nos textos dos cards.

--- a/comissões.html
+++ b/comissões.html
@@ -388,7 +388,7 @@
   <div class="art-card">
     <img src="./imagens/lorita.jpeg" alt="Arte 5" onclick="openModal(this)">
     <div class="content">
-      <h3>Anime - Evento de Aniversário</h3>
+      <h3>Anime - Evento de Aniversário, Loritta</h3>
 
       <!-- Ícone de informação com link, -->
       <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
@@ -464,7 +464,7 @@
     <li><strong>Prazo de entrega:</strong> Entre <strong>1 a 2 semanas</strong>, dependendo da complexidade e da fila de pedidos.</li>
     <li><strong>Revisões:</strong> Incluem até <strong>2 correções leves gratuitas</strong> durante o processo. Após a finalização, não serão aceitas revisões.</li>
     <li><strong>Entrega final:</strong> Arquivo em <strong>alta resolução</strong> (formato PNG), com e sem fundo. Inclui, se solicitado, o rascunho, lineart e processo completo. O envio pode ser feito por <strong>e-mail ou Google Drive</strong>, conforme a preferência.</li>
-    <li><strong>Uso das artes:</strong> As artes finalizadas podem ser usadas para divulgação do meu portfólio, sempre com <strong>marca d’água</strong>. Se for um presente ou homenagem e você quiser <strong>não divulgar publicamente</strong>, é só avisar!</li>
+    <li><strong>Uso das artes:</strong> As artes finalizadas podem ser usadas para divulgação do meu portfólio, sempre com <strong>marca d’água</strong>. Se for um presente ou homenagem e você quiser <strong>não divulgar publicamente</strong>, por favor, notifique-me para que a divulgação seja restrita.</li>
     <li><strong>Referências:</strong> Para melhores resultados, envie <strong>o máximo de informações possível</strong> sobre o pedido. Quanto mais imagens e descrições, mais fiel e personalizada será sua arte.</li>
   </ul>
 </div>
