--- a/comissões.html
+++ b/comissões.html
@@ -16,7 +16,7 @@
     }
 
     body {
-      background: linear-gradient(135deg, #1e1e2f, #3a3a52);
+      background: linear-gradient(135deg, #151738, #751b75);
       color: #fff;
       line-height: 1.6;
       padding: 20px;
@@ -299,7 +299,7 @@
     <br>
     <br>
     <br>
-    <h2>Apresentação de artes e estilos feitos por mim</h2>
+    <h2>Apresentação de artes e estilos autorais</h2>
   </header>
 
   <section class="portfolio">
@@ -380,7 +380,7 @@
     <div class="art-card">
       <img src="./imagens/dardos.jpeg" alt="Arte 9" onclick="openModal(this)">
       <div class="content">
-        <h3>Personagem original</h3>
+        <h3>Personagem original - Oc</h3>
         <p>Personagens de criação única autoral. Ideal para presentes personalizados ou uso exclusivo em perfis, agregando originalidade e identidade própria.</p>
       </div>
     </div>    
