--- a/comissões.html
+++ b/comissões.html
@@ -287,6 +287,15 @@
     user-select: none;
   }
 
+.credit {
+  text-align: center;
+  padding: 16px;
+  color: #aaa;
+  font-size: 14px;
+  margin-top: 40px;
+}
+
+
 
 
   </style>
@@ -583,6 +592,13 @@ function zoom(factor) {
 window.zoom = zoom;
 
   </script>
+  <div class="credit">
+  designed by 
+  <a href="https://www.instagram.com/udaniew/" target="_blank" style="color: #aaa; text-decoration: underline;">
+    @daniewz
+  </a>, powered by AI
+</div>
+
 </body>
 
 </html>
