--- a/comissões.html
+++ b/comissões.html
@@ -356,7 +356,7 @@
         <a href="https://novelmania.com.br/novels/infinity-world" target="_blank" style="color: #aad; text-decoration: underline;">Mais informações</a>
       </div>
 
-      <p>Desenhos em estilo anime, perfeitos para a criação de personagens cativantes ou para ilustrar suas narrativas visuais.</p>
+      <p>Fanarts de personagens icônicos, reinterpretados com um estilo único.</p>
     </div>
   </div>
 
